[package]
name = "consul-online"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = { version = "3.2.17", features = ["derive"], optional = true }
env_logger = { version = "0.9.0", default-features = false, features = ["humantime", "termcolor"], optional = true }
log = "0.4.17"
pem = "1.1.0"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
ureq = "2.5.0"
webpki = "0.22.0"
webpki-roots = "0.22.4"

[features]
bin = ["clap", "env_logger"]

[[bin]]
name = "consul-online"
path = "src/main.rs"
required-features = ["bin"]

[lib]
name = "consul_online"
path = "src/lib.rs"